@@ -9,6 +9,7 @@ S3method(h5writeAttribute,logical)
 S3method(h5writeAttribute,matrix)
 S3method(h5writeDataset,array)
 S3method(h5writeDataset,character)
+S3method(h5writeDataset,complex)
 S3method(h5writeDataset,data.frame)
 S3method(h5writeDataset,double)
 S3method(h5writeDataset,integer)
