@@ -118,6 +118,7 @@ static R_CallMethodDef libraryRCalls[] = {
   {"_H5Scombine_select", (DL_FUNC) &_H5Scombine_select, 3},
   {"_H5Sselect_index", (DL_FUNC) &_H5Sselect_index, 3},
   {"_H5Tget_class", (DL_FUNC) &_H5Tget_class, 1},
+  {"_H5Tcreate", (DL_FUNC) &_H5Tcreate, 2},
   {"_H5Tcopy", (DL_FUNC) &_H5Tcopy, 1},
   {"_H5Tset_size", (DL_FUNC) &_H5Tset_size, 2},
   {"_H5Tget_size", (DL_FUNC) &_H5Tget_size, 1},
@@ -132,6 +133,7 @@ static R_CallMethodDef libraryRCalls[] = {
   {"_H5Tget_offset", (DL_FUNC) &_H5Tget_offset, 1},
   {"_H5Tenum_create", (DL_FUNC) &_H5Tenum_create, 1},
   {"_H5Tenum_insert", (DL_FUNC) &_H5Tenum_insert, 3},
+  {"_h5createComplexDataType", (DL_FUNC) &_h5createComplexDataType, 0},
   {"_H5Pcreate", (DL_FUNC) &_H5Pcreate, 1},
   {"_H5Pget_class", (DL_FUNC) &_H5Pget_class, 1},
   {"_H5Pcopy", (DL_FUNC) &_H5Pcopy, 1},
